<com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="8dp"
    app:cardCornerRadius="16dp"
    app:cardElevation="4dp"
    app:cardBackgroundColor="@color/light_gray"
    app:strokeColor="@android:color/darker_gray"
    app:strokeWidth="2dp"
    app:rippleColor="@color/light_gray">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?attr/selectableItemBackground"
        android:orientation="horizontal"
        android:padding="8dp">

        <ImageView
            android:id="@+id/digimonImage"
            android:layout_width="72dp"
            android:layout_height="72dp"
            android:layout_marginEnd="8dp"
            android:background="@drawable/rounded_image_background"
            android:contentDescription="@string/digimon_image"
            android:scaleType="centerCrop" />

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                android:id="@+id/digimonName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@android:color/black"
                android:textSize="16sp"
                android:textStyle="bold" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="4dp">

                <ImageView
                    android:id="@+id/levelIcon"
                    android:layout_width="12dp"
                    android:layout_height="12dp"
                    android:layout_marginEnd="4dp"
                    android:contentDescription="@string/level_icon"
                    android:src="@drawable/levelup" />

                <TextView
                    android:id="@+id/digimonLevel"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@android:color/darker_gray"
                    android:textSize="14sp" />
            </LinearLayout>
        </LinearLayout>
        <!-- Botón de favorito -->
        <ImageButton
            android:id="@+id/favoriteButton"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:background="?attr/selectableItemBackgroundBorderless"
            android:src="@drawable/ic_favorite_border"
            android:contentDescription="@string/favorite_button"
            android:layout_gravity="center_vertical" />
    </LinearLayout>
</com.google.android.material.card.MaterialCardView>
